# nextalk

./: .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  INSTALL_LINUX_COMPLETE.md  LICENSE  Makefile  QUICKSTART.md  README.md  README_zh.md  debug_inject.py  funasr_wss_client.py  funasr_wss_server.py  mypy.ini  nextalk_cli.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-gui.txt  requirements-server.txt  requirements.txt  restart_nextalk.py  run.py  run_nextalk_test.sh  setup.py  start_all.bat  start_all.py  start_all.sh  start_client.sh  start_server.sh  test_injector.py  toggle_recording.py  version.yaml
.claude/: settings.local.json
.github/workflows/: build-release.yml  docker.yml  release.yml
_bmad-output/: bmm-workflow-status.yaml  component-inventory.md  development-guide.md  epics.md  index.md  integration-architecture.md  plan-model-settings.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  sprint-change-proposal-2025-12-23.md
_bmad-output/implementation-artifacts/: 1-1-fcitx5-plugin-integration.md  1-2-plugin-install-script.md  1-3-dart-socket-client.md  1-4-flutter-project-init.md  2-1-native-library-linking.md  2-2-portaudio-ffi-binding.md  2-3-sherpa-onnx-ffi-binding.md  2-4-model-manager.md  2-5-audio-inference-pipeline.md  2-6-vad-endpoint-detection.md  2-7-multi-model-asr-support.md  3-1-transparent-capsule-window.md  3-2-capsule-ui-component.md  3-3-state-machine-animations.md  3-4-system-tray-integration.md  3-5-global-hotkey-listener.md  3-6-full-business-flow.md  3-7-init-wizard-error-handling.md  3-8-i18n-language-switch.md  3-9-audio-device-selection.md  4-1-deb-build-script.md  4-2-install-uninstall-scripts.md  4-3-desktop-integration.md  4-4-docker-cross-distro-build.md  sprint-status.yaml  validation-report-1-1-2025-12-21.md  validation-report-1-4-2025-12-22.md  validation-report-2-2-2025-12-22.md  validation-report-2-3-2025-12-22.md  validation-report-2-4-2025-12-22.md  validation-report-2-5-2025-12-22.md  validation-report-2-7.md  validation-report-3-2-2025-12-22.md  validation-report-3-4-2025-12-22.md  validation-report-3-5-20251222.md  validation-report-3-7-2025-12-23.md  validation-report-3-8-20251224-144413.md  validation-report-4-1-20251224-143311.md  validation-report-4-4-20251227.md
_bmad-output/sprint-change-proposals/: scp-002-simplified-architecture.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
addons/fcitx5/: CMakeLists.txt
addons/fcitx5/src/: nextalk.conf.in  nextalk.cpp  nextalk.h
backup/ui_old/: icon_manager.py  tray_gtk3_appindicator.py  tray_gtk4.py  tray_smart.py
config/: README.md  default_config.ini  low_latency_config.ini  nextalk.yaml  nextalk.yaml.example
configs/: nextalk.yaml
docker/: Dockerfile.build
docs/: API.md  IME_GUIDE.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  SERVER_SETUP.md  TEXT_INJECTION_GUIDE.md  TROUBLESHOOTING.md  architecture.md  architecture_zh.md  developer_guide.md  developer_guide_zh.md  development-pitfalls.md  development-pitfalls_zh.md  docker-build-guide.md  docker-build-guide_zh.md  front-end-spec.md  front-end-spec_zh.md  prd.md  prd_zh.md  prompt.md  refactor_plan.md  setup_guide.md  setup_guide_zh.md  test-scenarios.md  test-scenarios_zh.md  ui_tray_system.md  user_guide.md  user_guide_zh.md
docs/research/: docker_build.md  gnome_wayland.md
gnome-extension/: README.md  focus_test.sh  install.sh  test.sh  uninstall.sh
gnome-extension/nextalk@gonewx.com/: extension.js  metadata.json
libs/: VERSIONS.md
nextalk/: __init__.py  __main__.py  main.py
nextalk/audio/: __init__.py  capture_pyaudio.py  device.py
nextalk/config/: __init__.py  manager.py  models.py
nextalk/core/: __init__.py  controller.py  session.py
nextalk/input/: __init__.py  hotkey.py  listener.py
nextalk/network/: __init__.py  protocol.py  ws_client.py
nextalk/output/: __init__.py  base_injector.py  clipboard.py  environment_detector.py  ime_base.py  ime_exceptions.py  ime_linux.py  ime_macos.py  ime_manager.py  ime_monitor.py  ime_windows.py  injection_exceptions.py  injection_factory.py  injection_models.py  portal_injector.py  text_injector.py  text_processor.py  xdotool_injector.py
nextalk/ui/: __init__.py  icon_manager.py  icons.py  menu.py  tray.py  tray_gtk3_appindicator.py  tray_gtk4.py  tray_pystray.py  tray_smart.py
nextalk/utils/: __init__.py  logger.py  monitor.py  system.py
packaging/deb/: control.template  nextalk.desktop  postinst  prerm
packaging/rpm/: nextalk.spec.template
scripts/: benchmark.py  build-pkg.sh  build.py  build_package.sh  check_deps.sh  cleanup_test_processes.py  create_silence_wav.py  docker-build.sh  download_models.py  funasr_client_demo.py  install_addon.sh  nextalk  nextalk.bat  nextalk.py  package.py  release.sh  run_client.py  run_server.py  safe_test_runner.py  start.py  test_guardian.py  test_hotkey.py  test_ime_basic.py  test_ime_end_to_end.py  test_ime_injection.py  test_injection.py  trim_icon.sh  verify-2-1.sh  verify-desktop-integration.sh  verify-sherpa-story.sh  verify-transparent-window.sh  verify_installation.py
src/nextalk_client/: CHANGES.md  README.md  client_logic.py  main.py
src/nextalk_server/: README.md  __init__.py  app.py  config.py  funasr_model.py  main.py  server_app.py  websocket_handler.py  websocket_routes.py
src/nextalk_shared/: __init__.py  constants.py  data_models.py
tests/: __init__.py  conftest.py  pytest.ini  test_funasr_model.py
tests/audio/: __init__.py  test_capture.py  test_device.py
tests/core/: __init__.py  test_controller.py  test_session.py
tests/e2e/: __init__.py  test_compatibility.py  test_user_scenarios.py
tests/fixtures/: generate_speech_wav.py
tests/input/: __init__.py  test_hotkey.py  test_listener.py
tests/integration/: __init__.py  test_full_workflow.py  test_ime_integration.py  test_ime_integration.py.disabled  test_text_injection_integration.py  test_voice_flow.py
voice_capsule/: README.md  l10n.yaml  pubspec.yaml
(+169 files in other folders)
