[project]
name = "nextalk"
version = "0.1.0"
description = "Lightweight real-time local speech recognition and input system"
requires-python = ">=3.10.14"
authors = [
    {name = "NexTalk Contributors"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets>=10.4",
    "pyaudio>=0.2.12",
    "webrtcvad-wheels",
    "faster-whisper",
    "numpy>=1.22.4",
    "pydantic",
    "pydantic-settings",
    "pytest>=8.3.5",
    "webrtcvad>=2.0.10",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
    "pynput>=1.7.6",
    "pillow>=11.2.1",
    "pystray>=0.19.5",
    "huggingface-hub>=0.30.2",
    "silero-vad>=5.1.2",
    "pip>=25.0.1",
    "pyperclip>=1.8.2",
    "funasr>=1.2.6",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "B", "C4", "PIE"]
ignore = []

[tool.ruff.isort]
known-first-party = ["nextalk_server", "nextalk_client", "nextalk_shared"] 
