[project]
name = "nextalk"
version = "0.1.0"
description = "个人轻量级实时语音识别与输入系统"
authors = [{name = "NexTalk Team", email = "contact@nextalk.dev"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets>=12.0",
    "PyYAML>=6.0",
    "pynput>=1.7.6",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "sounddevice>=0.4.6",
    "numpy>=1.21.0",
    "pyaudio>=0.2.14",
    "pystray>=0.19.5",
    "pillow>=10.4.0",
    "psutil>=7.0.0",
    "cairosvg>=2.7.1",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.4.0",
    "pillow>=9.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "coverage>=7.0.0",
]

[project.scripts]
nextalk = "nextalk.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short --timeout=20 --timeout-method=thread --maxfail=10 --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 20
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests", 
    "hardware: marks tests that require actual hardware",
    "timeout: marks tests with custom timeout settings",
    "websocket: marks tests that use WebSocket connections",
    "network: marks tests that require network access"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning:.*coroutine.*was never awaited",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning:.*unclosed.*socket.*",
    "ignore::RuntimeWarning:.*Task was destroyed but it is pending.*",
    "ignore::UserWarning:.*Websocket.*"
]
junit_family = "xunit2"
# 强制串行执行某些测试以避免资源竞争
serial_markers = ["integration", "websocket", "hardware"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["nextalk"]
omit = ["*/tests/*"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "coverage>=7.6.1",
    "flake8>=5.0.4",
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
]
